tests/error/testcaseErroTipoNaoDefinido.g
cadeira soma(int a, int b) { /* tipo bizarro /*
    retorne a + b;
}
programa {
    int x;
    x = soma(1,2);
    escreva x;
}